--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <!-- <link href="build/bundle.css" rel="stylesheet"> -->
+    <link href="build/bundle.css" rel="stylesheet">
   </head>
   <body>
     <div id="main">Howdy</div>
